--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/photo5260363687036826006"
+        app:srcCompat="@drawable/zamok"
         tools:srcCompat="@drawable/photo5260363687036826006"
         tools:visibility="visible" />
 
