--- a/app/src/main/res/layout/activity_first_screen.xml
+++ b/app/src/main/res/layout/activity_first_screen.xml
@@ -3,10 +3,58 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/grayy"
     android:layout_height="match_parent"
+    android:background="@color/grayy"
     tools:context=".First_screen">
 
+
+    <ImageView
+        android:id="@+id/resumebutton2"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="240dp"
+        android:layout_marginTop="119dp"
+        android:layout_marginEnd="91dp"
+        android:layout_marginBottom="532dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/_0734"
+        tools:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/soundoffbutton2"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="91dp"
+        android:layout_marginTop="119dp"
+        android:layout_marginEnd="240dp"
+        android:layout_marginBottom="532dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/soundoffpin"
+        tools:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/soundbutton2"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="91dp"
+        android:layout_marginTop="119dp"
+        android:layout_marginEnd="240dp"
+        android:layout_marginBottom="532dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/soundpin"
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/game_name"
@@ -64,7 +112,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list_of_levels" /><![CDATA[
+        app:layout_constraintTop_toBottomOf="@+id/list_of_levels" />
+
+    <Button
+        android:id="@+id/language"
+        android:layout_width="228dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="290dp"
+        android:layout_marginBottom="386dp"
+        android:backgroundTint="#757373"
+        android:fontFamily="@font/albionic"
+        android:text="中国人"
+        android:textColor="#0E0E0E"
+        android:textSize="26sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" /><![CDATA[
 
     app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
