--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:backgroundTint="#183C33"
     tools:context=".Level1">
 
     <RadioGroup
@@ -33,7 +35,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/photo5260363687036826006"
         tools:srcCompat="@drawable/photo5260363687036826006"
-        tools:visibility="visible" />
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/textView"
@@ -237,11 +239,13 @@
         android:id="@+id/stol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#00152E27"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/stol_"
-        tools:visibility="invisible" />
+        app:srcCompat="@drawable/v3"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/lvl_name"
@@ -251,6 +255,7 @@
         android:layout_marginTop="44dp"
         android:fontFamily="@font/albionic"
         android:text="1.Пока все просто"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
@@ -259,18 +264,18 @@
 
     <ImageView
         android:id="@+id/mainbutton"
-        android:layout_width="108dp"
-        android:layout_height="82dp"
-        android:layout_marginStart="101dp"
-        android:layout_marginTop="313dp"
-        android:layout_marginEnd="202dp"
-        android:layout_marginBottom="336dp"
+        android:layout_width="110dp"
+        android:layout_height="79dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="303dp"
+        android:layout_marginEnd="188dp"
+        android:layout_marginBottom="339dp"
         app:layout_constraintBottom_toBottomOf="@+id/stol"
         app:layout_constraintEnd_toEndOf="@+id/stol"
         app:layout_constraintStart_toStartOf="@+id/stol"
         app:layout_constraintTop_toTopOf="@+id/stol"
         app:srcCompat="?attr/selectableItemBackgroundBorderless"
-        tools:visibility="gone" />
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/pausebutton"
