--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -24,8 +24,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="415dp"
-        android:layout_height="620dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="49dp"
         android:layout_marginBottom="72dp"
         android:visibility="invisible"
@@ -33,13 +33,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/photo5260363687036826006"
-        tools:srcCompat="@drawable/photo5260363687036826006"
-        tools:visibility="gone" />
+        app:srcCompat="@drawable/sejf"
+        tools:srcCompat="@drawable/ss"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="105dp"
+        android:layout_width="100dp"
         android:layout_height="37dp"
         android:layout_marginStart="77dp"
         android:layout_marginTop="291dp"
@@ -49,18 +49,20 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.307"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        tools:visibility="visible" />
+        app:layout_constraintVertical_bias="0.514"
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="105dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="230dp"
-        android:layout_marginEnd="234dp"
-        android:layout_marginBottom="353dp"
+        android:layout_width="100dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="284dp"
+        android:layout_marginEnd="221dp"
+        android:layout_marginBottom="398dp"
         android:textSize="32sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
@@ -81,32 +83,31 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.534"
         tools:visibility="invisible" />
 
     <RadioGroup
         android:id="@+id/num2"
-        android:layout_width="30dp"
+        android:layout_width="31dp"
         android:layout_height="32dp"
-        android:layout_marginStart="244dp"
-        android:layout_marginTop="215dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="373dp"
+        android:layout_marginStart="229dp"
+        android:layout_marginTop="269dp"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="420dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <RadioGroup
         android:id="@+id/num3"
-        android:layout_width="31dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="286dp"
-        android:layout_marginTop="215dp"
-        android:layout_marginEnd="98dp"
-        android:layout_marginBottom="374dp"
+        android:layout_width="30dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="267dp"
+        android:layout_marginTop="269dp"
+        android:layout_marginEnd="93dp"
+        android:layout_marginBottom="420dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -124,17 +125,19 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.615"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.495" />
 
     <RadioGroup
         android:id="@+id/num6"
-        android:layout_width="32dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="285dp"
-        android:layout_marginTop="260dp"
-        android:layout_marginEnd="98dp"
-        android:layout_marginBottom="330dp"
+        android:layout_width="30dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="267dp"
+        android:layout_marginTop="312dp"
+        android:layout_marginEnd="93dp"
+        android:layout_marginBottom="378dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -166,8 +169,10 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.475" />
 
     <RadioGroup
         android:id="@+id/num9"
@@ -180,50 +185,47 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.495" />
+
+    <RadioGroup
+        android:id="@+id/num0"
+        android:layout_width="32dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="228dp"
+        android:layout_marginTop="388dp"
+        android:layout_marginEnd="130dp"
+        android:layout_marginBottom="302dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <RadioGroup
-        android:id="@+id/num0"
-        android:layout_width="34dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="243dp"
-        android:layout_marginTop="342dp"
-        android:layout_marginEnd="139dp"
-        android:layout_marginBottom="248dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/redbutton"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <RadioGroup
         android:id="@+id/redbutton"
-        android:layout_width="110dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="347dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="248dp"
+        android:layout_width="107dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="392dp"
+        android:layout_marginEnd="222dp"
+        android:layout_marginBottom="307dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintEnd_toStartOf="@+id/num0"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/error"
-        android:layout_width="107dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="287dp"
-        android:layout_marginEnd="233dp"
-        android:layout_marginBottom="288dp"
+        android:layout_width="105dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="63dp"
+        android:layout_marginTop="342dp"
+        android:layout_marginEnd="222dp"
+        android:layout_marginBottom="342dp"
         android:fontFamily="casual"
         android:text="ERROR"
         android:textColor="#000000"
@@ -233,7 +235,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/stol"
@@ -245,7 +248,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/v3"
-        tools:visibility="visible" />
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/lvl_name"
@@ -275,7 +278,7 @@
         app:layout_constraintStart_toStartOf="@+id/stol"
         app:layout_constraintTop_toTopOf="@+id/stol"
         app:srcCompat="?attr/selectableItemBackgroundBorderless"
-        tools:visibility="visible" />
+        tools:visibility="gone" />
 
     <ImageView
         android:id="@+id/pausebutton"
