--- a/app/src/main/res/layout/activity_mainf.xml
+++ b/app/src/main/res/layout/activity_mainf.xml
@@ -10,18 +10,34 @@
         android:id="@+id/imageView2"
         android:layout_width="410dp"
         android:layout_height="730dp"
-        app:srcCompat="@drawable/kubok"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="-3dp" />
+        app:srcCompat="@drawable/kubok"
+        tools:visibility="visible" />
 
     <RadioGroup
         android:id="@+id/buttonlvl"
         android:layout_width="411dp"
         android:layout_height="735dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/final_text"
+        android:layout_width="319dp"
+        android:layout_height="111dp"
+        android:layout_marginTop="217dp"
+        android:layout_marginBottom="403dp"
+        android:fontFamily="@font/albionic"
+        android:text="Спасибо за прохождение!"
+        android:textSize="36sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
