--- a/app/src/main/res/layout/activity_mainf.xml
+++ b/app/src/main/res/layout/activity_mainf.xml
@@ -8,15 +8,15 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="410dp"
-        android:layout_height="730dp"
-        app:srcCompat="@drawable/kubok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="-3dp" />
+        app:srcCompat="@drawable/resource_final"
+        tools:srcCompat="@drawable/resource_final" />
 
     <RadioGroup
         android:id="@+id/buttonlvl"
