--- a/app/src/main/res/layout-land/activity_level1.xml
+++ b/app/src/main/res/layout-land/activity_level1.xml
@@ -39,6 +39,22 @@
         tools:srcCompat="@drawable/ss"
         tools:visibility="visible" />
 
+    <RadioGroup
+        android:id="@+id/delete"
+        android:layout_width="31dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="198dp"
+        android:layout_marginTop="382dp"
+        android:layout_marginEnd="182dp"
+        android:layout_marginBottom="316dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.681"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.484" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="109dp"
@@ -248,8 +264,7 @@
         app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.446"
-        tools:visibility="gone" />
+        app:layout_constraintVertical_bias="0.446" />
 
     <ImageView
         android:id="@+id/stol"
