--- a/app/src/main/res/layout-land/activity_level1.xml
+++ b/app/src/main/res/layout-land/activity_level1.xml
@@ -317,17 +317,16 @@
         android:id="@+id/resumebutton"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginStart="287dp"
+        android:layout_marginStart="624dp"
         android:layout_marginTop="74dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="27dp"
         android:layout_marginBottom="577dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.187"
         app:srcCompat="@drawable/_0734"
         tools:visibility="visible" />
 
@@ -379,5 +378,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/soundoffpin" />
+
+    <ImageView
+        android:id="@+id/helpbutton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="445dp"
+        android:layout_marginTop="74dp"
+        android:layout_marginEnd="206dp"
+        android:layout_marginBottom="257dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/pngegg" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
